--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 
 @include mat-core();
 
-$lemonmart-primary: mat-palette($mat-cyan, 300);
-$lemonmart-accent: mat-palette($mat-yellow, 500);
+$lemonmart-primary: mat-palette($mat-light-blue, 400);
+$lemonmart-accent: mat-palette($mat-amber, 400);
 $lemonmart-app-theme: mat-light-theme($lemonmart-primary, $lemonmart-accent);
 
 @include angular-material-theme($lemonmart-app-theme);
